--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "dmitryd/typo3-realurl",
+    "name": "romanleitner/typo3-realurl",
     "type": "typo3-cms-extension",
     "description": "Speaking URLs for TYPO3",
     "homepage": "https://github.com/dmitryd/typo3-realurl",
-    "version": "2.3.4",
+    "version": "2.3.5",
     "time": "2018-06-20",
     "license": "GPL-3.0+",
     "conflict": {
